<resources>
    <string name="app_name">Lista de la compra (ejercicio 3)</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_name_mandatory">Debes escribir el nombre del producto</string>
    <string name="no_products">No hay productos en la lista</string>
    <string name="product_category_name">Categoría del producto</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="important_product">Importante</string>
    <string name="add_button">Añadir</string>
    <string name="add_product">Añadir producto</string>
    <string name="summary">Lista de la compra: %1d productos =  %2f €</string>
    <string name="product_added">Producto %1s añadido</string>
</resources>